Remove unused files and refactor test classes